--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^4.2.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "hbs": "^4.2.0",
